--- a/avtomaty.html
+++ b/avtomaty.html
@@ -183,7 +183,6 @@
 
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
 
-
     <div class="description container">
         <div class="row">
             <div class="col"></div>
@@ -222,6 +221,7 @@
 
     <!-- /////////////////////////////////////////   Mashines    ////////////////////////////////////////     -->
 
+    <div class="container hr-line"></div>
 
     <div class="container mashines">
         <div class="row">
@@ -347,7 +347,8 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Кавомашини типу Суперавтомат часто можна побачити в офісах різних фірм, салонах краси, ресторанах швидкого харчування і на заправках.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Кавомашини типу Суперавтомат часто можна побачити в офісах
+                        різних фірм, салонах краси, ресторанах швидкого харчування і на заправках.</small> </h5>
                 <ul>
                     <small>
                         <li>
@@ -363,7 +364,8 @@
                         </li>
 
                         <li>
-                            Для того щоб приготувати каву, потрібно просто вибрати бажаний напій, натиснувши кнопку. Решту апарат зробить сам.
+                            Для того щоб приготувати каву, потрібно просто вибрати бажаний напій, натиснувши кнопку.
+                            Решту апарат зробить сам.
                         </li>
                     </small>
 
@@ -376,82 +378,102 @@
 
     <!-- /////////////////////////////////////////   Mashines    ////////////////////////////////////////     -->
 
+    <div class="container hr-line"></div>
 
     <div class="container mashines">
         <div class="row">
             <div class="col mb-1">
                 <div class="card ">
-                    <img src="/img/avtomaty/GaiaTouch.webp" class="card-img-top" alt="GaiaTouch">
+                    <img src="/img/avtomaty/franke.webp" class="card-img-top" alt="Franke FM800">
                     <div class="card-body">
-                        <h3 class="text-center">Bianchi Gaia Touch</h3>
+                        <h3 class="text-center">Franke FM800</h3>
                         <small>
-                            <p class="lh-sm">Автоматична кавомашина для приготування напоїв на основі зернової кави,
-                                сухого молока, какао та кавових міксів.</p>
+                            <p class="lh-sm">З появою Franke Spectra FoamMaster 800 з'явилася можливість втілити в
+                                реальність Ваші найсміливіші мрії про ідеальний кавовий напій. Якість молочної піни і
+                                смак еспресо за допомогою патентованих технологій FRANKE вражають уяву.</p>
 
-                            <p class="lh-sm">7-дюймовий сенсорний екран замість кнопок вибору, з можливістю
-                                відтворення мультимедійного контенту.</p>
+                            <p class="lh-sm">Автоматична подача пару.</p>
 
-                            <p class="lh-sm">Оснащена великим роздавальним відділенням (170 мм), пристосованим як до
-                                маленьких чашок для еспресо , так і великих чашок, гуртків або глечиків.</p>
+                            <p class="lh-sm">Підігрів чашок.</p>
 
-                            <p class="lh-sm">Зона видачі з підсвічуванням.</p>
+                            <p class="lh-sm">Пряме підключення до водопроводу і зливу води (можливість працювати з
+                                бутильованою водою).</p>
 
-                            <p class="lh-sm">Може приготувати 8 видів напоїв на основі кави, сухого молока, какао та
-                                різноманітних кавових міксів.</p>
+                            <p class="lh-sm">Електронне сенсорне управління, 10.4' панель за технологією планшета з
+                                інтуїтивним 4 розрядним режимом функціонування.</p>
 
-                            <ul>
-                                <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 475 мм</li>
-                                <li><b>Потужність: </b>1,8 кВт</li>
-                                <li><b>Вага: </b>27 кг</li>
-                            </ul>
-                        </small>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="col mb-1">
-                <div class="card">
-                    <img src="/img/avtomaty/necta.webp" class="card-img-top" alt="NectaCoroPrime">
-                    <div class="card-body">
-                        <h3 class="telh-sm">Necta Coro Prime</h3>
-                        <small>
-                            <p class="lh-sm">Нова кавова машина, яка є найкращою в сегменті ХоРеКа.</p>
-
-                            <p class="lh-sm">Дає можливість приготування кави та кавових напоїв в локаціях з
-                                обмеженим простором. При цьому якість напоїв не поступається кращім зразкам, які були
-                                приготовлені на класичних кавоварках.</p>
-
-                            <p class="lh-sm">Готує напої з зернової кави і молока. Від 15 чашок в день.</p>
-
-                            <ul>
-                                <li><b>Габарити (ШхВхГ): </b>330 мм х 580 мм х 540 мм</li>
-                                <li><b>Потужність: </b>1,8 кВт</li>
-                                <li><b>Вага: </b>27 кг</li>
-                            </ul>
-                        </small>
-
-                    </div>
-                </div>
-            </div>
-
-            <div class="col mb-1">
-                <div class="card">
-                    <img src="/img/avtomaty/TaliaTouch.webp" class="card-img-top" alt="BianchiTaliaTouch">
-                    <div class="card-body">
-                        <h3 class="text-center">Bianchi Talia Touch</h3>
-                        <small>
-                            <p class="lh-sm">Кавомашина Bianchi Talia Touch для приготування еспресо, капучино,
-                                гарячого шоколаду та інших напоїв.</p>
-
-                            <p class="lh-sm">Кавоварка оснащена сенсорним 7-дюймовим екраном з можливістю
-                                відтворення мультимедійного контенту і інтуїтивно зрозумілим меню. </p>
-
-                            <p class="lh-sm">Лаконічний дизайн кавомашини ідеально вписується в будь-який інтер'єр.
+                            <p class="lh-sm">Унікальна, революційна молочна система FoamMaster, інтегрована в машину.
                             </p>
 
-                            <p class="lh-sm">Може приготувати 24 види напоїв на основі кави, сухого молока, какао та
-                                різноманітних кавових міксів.</p>
+                            <p class="lh-sm">Можливість встановлення до 3-х кавомолок з керамічними ножами прямого
+                                помолу.</p>
+
+                            <p class="lh-sm">Автоматично регульований по висоті вузол видачі напоїв: від 80 до 185мм.
+                            </p>
+
+                            <p class="lh-sm">Автоматична декальцинація.</p>
+
+                            <ul>
+                                <li><b>Габарити (ШхВхГ): </b>580 мм х 600 мм х 712 мм</li>
+                                <li><b>Потужність: </b>1,8 кВт</li>
+                                <li><b>Вага: </b>52 кг</li>
+                            </ul>
+                        </small>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-1">
+                <div class="card">
+                    <img src="/img/avtomaty/wmf.webp" class="card-img-top" alt="WMF 1500S">
+                    <div class="card-body">
+                        <h3 class="telh-sm">WMF 1500S</h3>
+                        <small>
+                            <p class="lh-sm">WMF 1500S може робити величезну кількість різних напоїв використовуючи до 3
+                                бункерів - і все це при ширині в 32,5 см!</p>
+
+                            <p class="lh-sm">Крім класичних рецептів, WMF 1500S готує ідеальні літні напої з холодного
+                                молока.</p>
+
+                            <p class="lh-sm">Використовується новий температурний датчик, який в 4 рази швидше. Це
+                                призводить до більш швидкої роботи нагрівальної системи, а значить і кращої консистенції
+                                молочної піни.</p>
+
+                            <p class="lh-sm">Два бойлера потужністю 2,9 кВт для видачі пари і окропу. Це дозволяє
+                                готувати більше напоїв.</p>
+
+                            <p class="lh-sm">Великий екран з технологією тач-скрін.</p>
+                            <ul>
+                                <li><b>Габарити (ШхВхГ): </b>325 мм х 590 мм х 680 мм</li>
+                                <li><b>Потужність: </b>2,2 кВт</li>
+                                <li><b>Вага: </b>40 кг</li>
+                            </ul>
+                        </small>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-1">
+                <div class="card">
+                    <img src="/img/avtomaty/carimali.webp" class="card-img-top" alt="Carimali Blue Dot">
+                    <div class="card-body">
+                        <h3 class="text-center">Carimali Blue Dot</h3>
+                        <small>
+                            <p class="lh-sm">Carimali Blue Dot — італійська кавоварка останнього покоління з 7-дюймовим
+                                сенсорним дисплеєм.</p>
+
+                            <p class="lh-sm">Основною перевагою є чудовий смак напоїв і мінімум зусиль для
+                                обслуговування і завантаження продукції.</p>
+
+                            <p class="lh-sm">Запатентована технологія для максимального енергозбереження забезпечує
+                                високу продуктивність і зниження енергоспоживання.</p>
+
+                            <p class="lh-sm">Гнучкі конфігурації машини сприяють високій продуктивності і широкому
+                                вибору напоїв.</p>
+
+                            <p class="lh-sm">Швидка автоматична чистка</p>
 
                             <ul>
                                 <li><b>Габарити (ШхВхГ): </b>395 мм х 720 мм х 576 мм</li>
@@ -463,33 +485,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col mb-1">
-                <div class="card">
-                    <img src="/img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="GaiaStyle">
-                    <div class="card-body">
-                        <h3 class="text-center">Bianchi Gaia Style</h3>
-                        <small>
-                            <p class="lh-sm">Автоматична машина для приготування зернової кави, кавових напоїв і
-                                гарячого шоколаду.</p>
-
-                            <p class="lh-sm">Можливо стаціонарне або автономне підключення до води.</p>
-
-                            <p class="lh-sm">Може приготувати 8 видів напоїв на основі кави, сухого молока, какао та
-                                різноманітних кавових міксів.</p>
-
-                            <ul>
-                                <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 450 мм</li>
-                                <li><b>Потужність: </b>1,5 кВт</li>
-                                <li><b>Вага: </b>25 кг</li>
-                            </ul>
-                        </small>
-
-                    </div>
-                </div>
-            </div>
-
-
         </div>
     </div>
 
@@ -557,21 +552,20 @@
                             </p>
                         </div>
 
-                        <h6>Менеджер з розвитку</h6>
 
+                        <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
                             <a class="telephone"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
+
                     </div>
                 </div>
             </div>
         </div>
-
-
         <div class="separator">
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
@@ -633,7 +627,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/bundle.js"></script>
 </body>
 
