--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col">
                     <h1 class="green text-center">ПРО КОМПАНІЮ</h1>
-                    <p>
+                    <p class="indent">
                         Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
                         здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
                         задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
@@ -464,7 +464,7 @@
 
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
                             <a class="telephone"
@@ -536,7 +536,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/bundle.js"></script>
 </body>
 
