--- a/dlya_cafe_restoranov.html
+++ b/dlya_cafe_restoranov.html
@@ -242,7 +242,7 @@
             </div>
 
             <div class="col-lg-6">
-                <p class="p-4 magazine">Мало хто хоче брати кота в мішку. Особливо, коли це стосується не однієї чашки
+                <p class="p-4 magazine indent">Мало хто хоче брати кота в мішку. Особливо, коли це стосується не однієї чашки
                     кави на сніданок, а цілого сегменту у вашому закладі.
                     Розуміючи цей момент, ми завжди проводимо презентацію послуг та товарів у нашому шоурумі.
                     Майбутні партнери мають змогу спробувати різні купажі кави, подивитись ближче на обладнання та
@@ -394,89 +394,88 @@
 
     </div>
 
-    <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
+   <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
 
-    <footer class="footer">
-        <div class="footer-items">
-            <div class="container">
-                <div class="row">
-                    <div class="col-4 p-4 offset-md-1">
-                        <h6>ХОРЕКА</h6>
-                        <p class="footer-left">
-                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
-                        </p>
-                        <div class="row">
-                            <div class="col footer-left">
-                                <h6>Харків</h6>
-                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
-                            </div>
-                            <div class="col footer-left">
-                                <h6>Київ</h6>
-                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
-                            </div>
+   <footer class="footer">
+    <div class="footer-items">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 p-4 offset-md-1">
+                    <h6>ХОРЕКА</h6>
+                    <p class="footer-left">
+                        Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
+                    </p>
+                    <div class="row">
+                        <div class="col footer-left">
+                            <h6>Харків</h6>
+                            <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                            <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                         </div>
-
-                        <div class="row">
-                            <div class="col footer-left">
-                                <h6>Біла Церква</h6>
-                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
-                            </div>
-                            <div class="col footer-left">
-                                <h6>Бровари, Бориспіль</h6>
-                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col footer-left">
-                                <h6>Черкаси</h6>
-                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col footer-left">
-                                <h6>e-mail</h6>
-                                <a class="telephone"
-                                    href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
-                            </div>
+                        <div class="col footer-left">
+                            <h6>Київ</h6>
+                            <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                         </div>
                     </div>
 
-
-                    <div class="col-4 p-4 offset-md-2">
-
-                        <div class="footer-left">
-                            <h6>ВЕНДІНГ</h6>
-                            <p>
-                                Встановлення вендінгового обладнання по містах:
-                                Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                                Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
-
-                            </p>
+                    <div class="row">
+                        <div class="col footer-left">
+                            <h6>Біла Церква</h6>
+                            <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                         </div>
+                        <div class="col footer-left">
+                            <h6>Бровари, Бориспіль</h6>
+                            <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                        </div>
+                    </div>
 
+                    <div class="row">
+                        <div class="col footer-left">
+                            <h6>Черкаси</h6>
+                            <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                        </div>
+                    </div>
 
-                        <h6>Менеджер з розвитку</h6>
-                        <p>
-                            <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
-                        </p>
-                        <p>
+                    <div class="row">
+                        <div class="col footer-left">
+                            <h6>e-mail</h6>
                             <a class="telephone"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-4 p-4 offset-md-2">
+
+                    <div class="footer-left">
+                        <h6>ВЕНДІНГ</h6>
+                        <p class="">
+                            Встановлення вендінгового обладнання по містах:
+                            Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
+                            Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
+                            Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
+
                         </p>
                     </div>
+
+
+                    <h6>Менеджер з розвитку</h6>
+                    <p class="">
+                        <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                    </p>
+                    <p class="">
+                        <a class="telephone"
+                            href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                    </p>
+
                 </div>
             </div>
         </div>
-
-
-        <div class="separator">
-            <h6><small>© 2016-2022 Bianchi professional</small></h6>
-        </div>
-    </footer>
+    </div>
+    <div class="separator">
+        <h6><small>© 2016-2022 Bianchi professional</small></h6>
+    </div>
+</footer>
 
     <!-- /////////////////////////////////////modal///////////////////////////// -->
 
@@ -534,7 +533,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/bundle.js"></script>
 </body>
 
