--- a/dlya_magazinov_i_setey.html
+++ b/dlya_magazinov_i_setey.html
@@ -244,7 +244,7 @@
             </div>
 
             <div class="col-lg-6">
-                <p class="p-4 magazine">Випити смачну каву зараз можна не тільки в кав'ярнях, але і в магазинах, як
+                <p class="p-4 magazine indent">Випити смачну каву зараз можна не тільки в кав'ярнях, але і в магазинах, як
                     великих, так і маленьких. Пропонуємо вам встановити кавове обладнання у вашій торговельній мережі на
                     вигідних умовах. Тільки уявіть, як аромат свіжомеленої кави зустрічає ваших клієнтів і спонукає
                     повертатися за стаканчиком улюбленого напою знову і знову.
@@ -456,11 +456,12 @@
                                 Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
                                 Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
                                 Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
+
                             </p>
                         </div>
-                        
+
+
                         <h6>Менеджер з розвитку</h6>
-                        
                         <p>
                             <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
@@ -468,12 +469,11 @@
                             <a class="telephone"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
+
                     </div>
                 </div>
             </div>
         </div>
-
-
         <div class="separator">
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
@@ -535,7 +535,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/bundle.js"></script>
 </body>
 
