--- a/vending.html
+++ b/vending.html
@@ -247,7 +247,7 @@
             </div>
 
             <div class="col-lg-6">
-                <p class="p-4 magazine">Складно уявити життя будь-якої сучасної компанії без аромату кави. Найбільш
+                <p class="p-4 magazine indent">Складно уявити життя будь-якої сучасної компанії без аромату кави. Найбільш
                     зручний і вигідний спосіб підвищити комфорт і ефективність роботи ваших співробітників -
                     встановлення кавових автоматів в вашому офісі, на підприємстві або в торговому/бізнес центрі,
                     магазині, начальному закладі.
@@ -408,13 +408,13 @@
                 </div>
             </div>
 
-            <div class="col-lg-6 text-center">
-                <p class="card-text lh-sm">Наші вендінгові апарати обладнані системою оплати банківською картою за допомогою
+            <div class="col-lg-6">
+                <p class="card-text lh-sm indent">Наші вендінгові апарати обладнані системою оплати банківською картою за допомогою
                     мобільного додатку ProstoPay, а також Googl Pay, Apple Pay, NFC</p>
 
                 <img src="./img/vending/vending2.webp" class="p-3 img-fluid" alt="magazin">
 
-                <p class="card-text lh-sm">Додаток підтримується OS Android та MAC OS. Завантажити додаток ви можете за
+                <p class="card-text lh-sm indent">Додаток підтримується OS Android та MAC OS. Завантажити додаток ви можете за
                     посиланнями нижче або відсканувавши QR код безпосередньо з апарату.</p>
 
                 <div class="row">
@@ -573,6 +573,7 @@
                         </div>
                     </div>
 
+
                     <div class="col-4 p-4 offset-md-2">
 
                         <div class="footer-left">
@@ -595,12 +596,11 @@
                             <a class="telephone"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
+
                     </div>
                 </div>
             </div>
         </div>
-
-
         <div class="separator">
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
@@ -662,7 +662,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/bundle.js"></script>
 </body>
 
