--- a/vending_avtomaty.html
+++ b/vending_avtomaty.html
@@ -224,18 +224,22 @@
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
+
                         <img src="/img/vending_avtomaty/700.webp" class="card-img-top mt-3" alt="Bianchi LEI 700">
                         <figcaption>
-                            <small>
-                                <ul class="lh-sm">
-                                    <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 666 мм <br>Глибина 780 мм</li>
-                                    <br>
-                                    <li><b>Потужність: <br> </b>1,8 кВт</li>
-                                    <br>
-                                    <li><b>Вага: <br> </b>167 кг</li>
-                                </ul>
-                            </small>
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 666 мм <br>Глибина 780 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>167 кг</li>
+                            </ul>
+                            <div class="timeline text-center">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
                         </figcaption>
+
                     </figure>
 
                     <div class="card-body">
@@ -247,36 +251,63 @@
                                 застосовується ексклюзивно в вендінг машинах Bianchi Industry. Можливість
                                 індивідуального вибору дозування цукру.</p>
                         </small>
+
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4 mb-2 mt-2">
-                <div class="card">
-                    <img src="/img/vending_avtomaty/600_sensor_otr.webp" class="card-img-top mt-3"
-                        alt="Bianchi LEI 600 Smart">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="/img/vending_avtomaty/600_sensor_otr.webp" class="card-img-top mt-3"
+                            alt="Bianchi LEI 600 Smart">
+                        <figcaption>
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 620 мм <br>Глибина 770 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>140 кг</li>
+                            </ul>
+                            <div class="timeline text-center">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+
+                    </figure>
+
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 600 Smart</h3>
                         <small>
                             <p class="lh-sm indent">Автоматична вендінг-машина для приготування гарячих напоїв місткістю
                                 600 чашок на 24 напої з сенсорною панеллю вибору напоїв. Обладнана системою
                                 автоматичного регулювання помолу кави, що гарантує найвищу якість напоїв.</p>
-
-                            <ul>
-                                <li><b>Габарити (ВхШхГ): </b>1830 мм х 620 мм х 770 мм</li>
-                                <li><b>Потужність: </b>1,8 кВт</li>
-                                <li><b>Вага: </b>140 кг</li>
-                            </ul>
                         </small>
-
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4 mb-2 mt-2">
-                <div class="card">
-                    <img src="/img/vending_avtomaty/600_touch1.webp" class="card-img-top mt-3"
-                        alt="Bianchi LEI 600 Touch">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="/img/vending_avtomaty/600_touch1.webp" class="card-img-top mt-3"
+                            alt="Bianchi LEI 600 Touch">
+                        <figcaption>
+                            <ul class="lh-sm">
+                                <li><b>Габарити: <br> </b>Висота 1830 мм <br>Ширина 620 мм <br>Глибина 770 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>140 кг</li>
+                            </ul>
+                            <div class="timeline text-center">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+                    </figure>
+
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 600 Touch</h3>
                         <small>
@@ -284,20 +315,33 @@
                                 інтерактивною сенсорною панеллю вибору напоїв. У меню апарату входять кілька типів
                                 кавових напоїв на основі зернової кави, шоколаду, розчинних кавових інгредієнтів а також
                                 чай.</p>
-
-                            <ul>
-                                <li><b>Габарити (ВхШхГ): </b>1830 мм х 620 мм х 770 мм</li>
-                                <li><b>Потужність: </b>1,8 кВт</li>
-                                <li><b>Вага: </b>140 кг</li>
-                            </ul>
                         </small>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4 mb-2 mt-2">
-                <div class="card">
-                    <img src="/img/vending_avtomaty/400_otr.webp" class="card-img-top mt-3" alt="Bianchi LEI 400">
+                <div class="card hover-text-one">
+                    <figure class="effect-text-three">
+                        <img src="/img/vending_avtomaty/400_otr.webp" class="card-img-top mt-3" alt="Bianchi LEI 400">
+                        <figcaption>
+                            <ul class="lh-sm">
+                                <li><b>32 символьний <br> алфавітно- <br> цифровий <br> LCD дисплей</b></li>
+                                <br>
+                                <li><b>Габарити: <br> </b>Висота 1630 мм <br>Ширина 650 мм <br>Глибина 770 мм</li>
+                                <br>
+                                <li><b>Потужність: <br> </b>1,8 кВт</li>
+                                <br>
+                                <li><b>Вага: <br> </b>128 кг</li>
+                            </ul>
+                            <div class="timeline text-center">
+                                <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
+                                    data-bs-target="#Modal">Замовити</button>
+                            </div>
+                        </figcaption>
+
+                    </figure>
+
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 400</h3>
                         <small>
@@ -305,13 +349,6 @@
                                 місцях з наявністю численних клієнтів, що вживають каву і напої на його основі: офісних
                                 центрах, будинках міської адміністрації, великих торгових залах, а також у адмінкорпусах
                                 великих виробничих об'єднань. Можливість індивідуального вибору дозування цукру.</p>
-
-                            <ul>
-                                <li><b>32 символьный алфавітно-цифровий LCD дисплей</b></li>
-                                <li><b>Габарити (ВхШхГ): </b>1630 мм х 650 мм х 770 мм</li>
-                                <li><b>Потужність: </b>1,8 кВт</li>
-                                <li><b>Вага: </b>128 кг</li>
-                            </ul>
                         </small>
                     </div>
                 </div>
