--- a/kofemolki.html
+++ b/kofemolki.html
@@ -178,7 +178,7 @@
     </nav>
 
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    
+
     <div class="separator">
         <h3>Професійні кавомолки</h3>
     </div>
@@ -187,15 +187,19 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Кавомолка — це другий головний пристрій в кав'ярні поряд з кавоваркою. Від її якості і надійності залежить те, наскільки смачним буде еспресо.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Кавомолка — це другий головний пристрій в кав'ярні поряд з
+                        кавоваркою. Від її якості і надійності залежить те, наскільки смачним буде еспресо.</small>
+                </h5>
                 <ul>
                     <small>
                         <li>
-                            Великий діаметр жорен дозволяє змелювати зерно швидко і однорідно. Регулюється ступінь помолу.
+                            Великий діаметр жорен дозволяє змелювати зерно швидко і однорідно. Регулюється ступінь
+                            помолу.
                         </li>
 
                         <li>
-                            У контейнер поміщається великий обсяг кави, за раз можна помолоти зерна відразу на кілька порцій напою.
+                            У контейнер поміщається великий обсяг кави, за раз можна помолоти зерна відразу на кілька
+                            порцій напою.
                         </li>
 
                         <li>
@@ -203,7 +207,7 @@
                         </li>
 
                         <li>
-                            Професійні кавомолки розраховані на підвищені навантаження і тривалу експлуатацію. 
+                            Професійні кавомолки розраховані на підвищені навантаження і тривалу експлуатацію.
                         </li>
                     </small>
 
@@ -221,20 +225,23 @@
     <div class="container mashines">
         <div class="row">
             <div class="col-md-1 mb-1"></div>
-            
+
             <div class="col-md-5 mb-1">
                 <div class="card ">
-                    <img src="/img/kofemolki/full_n1N8k7Nw.webp" class="card-img-top img-fluid" style="max-width: 90%;" alt="Fiorenzato F64E">
+                    <img src="/img/kofemolki/full_n1N8k7Nw.webp" class="card-img-top img-fluid" style="max-width: 90%;"
+                        alt="Fiorenzato F64E">
                     <div class="card-body">
                         <h3 class="text-center">Fiorenzato F64E</h3>
                         <small>
-                            <p class="lh-sm indent">Fiorenzato F64E — кавомолка прямого помолу, продумана до дрібниць для забезпечення максимальної ефективності і практичності.</p>
+                            <p class="lh-sm indent">Fiorenzato F64E — кавомолка прямого помолу, продумана до дрібниць
+                                для забезпечення максимальної ефективності і практичності.</p>
 
                             <p class="lh-sm">Безперервна мікрометрична регулювання помолу з дозатором.</p>
 
                             <p class="lh-sm">Плоскі жорна діаметром 64 мм</p>
 
-                            <p class="lh-sm">Відсутність бункера для змеленої кави і автоматичний режим помолу заданої кількості порцій прямо в холдер.</p>
+                            <p class="lh-sm">Відсутність бункера для змеленої кави і автоматичний режим помолу заданої
+                                кількості порцій прямо в холдер.</p>
 
                             <p class="lh-sm">Fiorenzato ідеально підходить для великого комерційного використання.</p>
 
@@ -253,19 +260,24 @@
 
             <div class="col-md-5 mb-1">
                 <div class="card text">
-                    <img src="/img/kofemolki/full_HeaIIsBn.webp" class="card-img-top img-fluid" style="max-width: 90%;" alt="Eureka Zenith 65E">
+                    <img src="/img/kofemolki/full_HeaIIsBn.webp" class="card-img-top img-fluid" style="max-width: 90%;"
+                        alt="Eureka Zenith 65E">
                     <div class="card-body">
                         <h3 class="text-center">Eureka Zenith 65E</h3>
                         <small>
-                            <p class="lh-sm indent">Кавомолка Eureka Zenith 65E поєднала в собі простоту використання і стиль споживчої моделі з високою продуктивністю, стабільністю і довговічністю.</p>
+                            <p class="lh-sm indent">Кавомолка Eureka Zenith 65E поєднала в собі простоту використання і
+                                стиль споживчої моделі з високою продуктивністю, стабільністю і довговічністю.</p>
 
-                            <p class="lh-sm">Масивні плоскі жорна діаметром 65 мм, створюють стабільний і рівномірний помол без грудок.</p>
+                            <p class="lh-sm">Масивні плоскі жорна діаметром 65 мм, створюють стабільний і рівномірний
+                                помол без грудок.</p>
 
                             <p class="lh-sm">Ексклюзивна найтонша регулювання помолу.</p>
 
-                            <p class="lh-sm">Електронна панель управління з дисплеєм, максимально проста в управлінні.</p>
+                            <p class="lh-sm">Електронна панель управління з дисплеєм, максимально проста в управлінні.
+                            </p>
 
-                            <p class="lh-sm">Дві кнопки, що налаштовують дозування кави. Це дає можливість готувати одинарний і подвійний еспресо з різних холдерів, не змінюючи помол.</p>
+                            <p class="lh-sm">Дві кнопки, що налаштовують дозування кави. Це дає можливість готувати
+                                одинарний і подвійний еспресо з різних холдерів, не змінюючи помол.</p>
 
                             <ul>
                                 <li><b>Габарити (ШхВхГ): </b>232 мм х 593 мм х 264 мм</li>
@@ -286,88 +298,88 @@
 
 
 
-   <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
+    <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
 
-   <footer class="footer">
-    <div class="footer-items">
-        <div class="container">
-            <div class="row">
-                <div class="col-6 p-4 offset-md-1">
-                    <h6>ХОРЕКА</h6>
-                    <p class="footer-left">
-                        Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
-                    </p>
-                    <div class="row">
-                        <div class="col footer-left">
-                            <h6>Харків</h6>
-                            <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                            <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+    <footer class="footer">
+        <div class="footer-items">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 p-4 offset-md-1">
+                        <h6>ХОРЕКА</h6>
+                        <p class="footer-left">
+                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Бровари, Бориспіль, Черкаси
+                        </p>
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>Харків</h6>
+                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Київ</h6>
+                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+                            </div>
                         </div>
-                        <div class="col footer-left">
-                            <h6>Київ</h6>
-                            <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>Біла Церква</h6>
+                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Бровари, Бориспіль</h6>
+                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>Черкаси</h6>
+                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col footer-left">
+                                <h6>e-mail</h6>
+                                <a class="telephone"
+                                    href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col footer-left">
-                            <h6>Біла Церква</h6>
-                            <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
-                        </div>
-                        <div class="col footer-left">
-                            <h6>Бровари, Бориспіль</h6>
-                            <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
-                        </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col footer-left">
-                            <h6>Черкаси</h6>
-                            <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
-                        </div>
-                    </div>
+                    <div class="col-4 p-4 offset-md-2">
 
-                    <div class="row">
-                        <div class="col footer-left">
-                            <h6>e-mail</h6>
+                        <div class="footer-left">
+                            <h6>ВЕНДІНГ</h6>
+                            <p>
+                                Встановлення вендінгового обладнання по містах:
+                                Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
+                                Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
+
+                            </p>
+                        </div>
+
+
+                        <h6>Менеджер з розвитку</h6>
+                        <p>
+                            <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                        </p>
+                        <p>
                             <a class="telephone"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-6 p-4 offset-md-2">
-
-                    <div class="footer-left">
-                        <h6>ВЕНДІНГ</h6>
-                        <p>
-                            Встановлення вендінгового обладнання по містах:
-                            Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
-                            Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                            Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
-
                         </p>
+
                     </div>
-
-
-                    <h6>Менеджер з розвитку</h6>
-                    <p>
-                        <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
-                    </p>
-                    <p>
-                        <a class="telephone"
-                            href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
-                    </p>
-
                 </div>
             </div>
         </div>
-    </div>
-    <div class="separator">
-        <h6><small>© 2016-2022 Bianchi professional</small></h6>
-    </div>
-</footer>
+        <div class="separator">
+            <h6><small>© 2016-2022 Bianchi professional</small></h6>
+        </div>
+    </footer>
 
     <!-- /////////////////////////////////////modal///////////////////////////// -->
 
