--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
 </head>
 
 <body>
@@ -103,7 +102,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
+                        <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
 
                     <li class="nav-item">
@@ -537,7 +536,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="./index.js"></script> -->
 </body>
 
 </html>
