--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -222,7 +222,7 @@
 
     <div class="container hr-line"></div>
 
-    <div class="container mashines">
+    <div class="container cards">
         <div class="row">
             <div class="col mb-1">
                 <div class="card ">
@@ -379,7 +379,7 @@
 
     <div class="container hr-line"></div>
 
-    <div class="container mashines">
+    <div class="container cards">
         <div class="row">
             <div class="col mb-1">
                 <div class="card ">
