--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -220,7 +220,7 @@
 
     <div class="container hr-line"></div>
 
-    <div class="container mashines">
+    <div class="container cards">
         <div class="row">
             <div class="col-md-1 mb-1"></div>
 
