--- a/src/postovie.html
+++ b/src/postovie.html
@@ -218,7 +218,7 @@
     <!-- /////////////////////////////////////////   Mashines    ////////////////////////////////////////     -->
     <div class="container hr-line"></div>
 
-    <div class="container mashines" style="padding-left: 10%;">
+    <div class="container cards" style="padding-left: 10%;">
 
         <div class="row">
            
