--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -217,7 +217,7 @@
 
     <div class="container hr-line"></div>
 
-    <div class="container mashines">
+    <div class="container cards">
         <div class="row">
             <div class="col-md-4 mb-2 mt-2">
                 <div class="card hover-text-one">
