--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,11 @@
 
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
-            <img src="./img/logo_menu.webp" alt="logo" width="194" height="48" class="d-inline-block align-text-top">
+            
+            <div width="52" height="48">
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
+            </div>
+            <img src="./img/logo_menu2.webp" id="logo2" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
                 <span class="navbar-toggler-icon"></span>
