--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -189,9 +189,9 @@
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
 
     <section class="icons">
-        <div class="container">
+        <div class="container cards">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -203,7 +203,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -214,7 +214,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -350,38 +350,38 @@
     <div class="gallery" id="gallery">
         <div class="container text-center">
             <div class="row">
-                <div class="col">
-                    <div class="img-fluid p-1">
+                <div class="col-sm-4 col-lg-2">
+                    <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full1.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
                 
-                <div class="col">
-                    <div class="img-fluid p-1">
+                <div class="col-sm-4 col-lg-2">
+                    <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full2.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
-                <div class="col">
-                    <div class="img-fluid p-1">
+                <div class="col-sm-4 col-lg-2">
+                    <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full3.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
-                <div class="col">
-                    <div class="img-fluid p-1">
+                <div class="col-sm-4 col-lg-2">
+                    <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full4.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
-                <div class="col">
-                    <div class="img-fluid p-1">
+                <div class="col-sm-4 col-lg-2">
+                    <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full5.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
 
-                <div class="col">
-                    <div class="img-fluid p-1">
+                <div class="col-sm-4 col-lg-2">
+                    <div class="img-fluid">
                         <img src="./img/dlya_cafe_restoranov/full6.webp" class="img-thumbnail grayscale" alt="slide">
                     </div>
                 </div>
