--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -186,12 +186,12 @@
         </div>
     </div>
 
-    <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
+    <!-- /////////////////////////////////////////   Cards    ////////////////////////////////////////     -->
 
     <section class="icons">
-        <div class="container">
+        <div class="container cards">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -203,7 +203,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -217,12 +217,12 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Безкоштовний сервіс <br> та доставка</h5>
-                            <p class="card-text">Забезпечуємо своєчасним сервісом і доставкою інгредієнтів. <br> Всі
+                            <p class="card-text">Забезпечуємо своєчасним сервісом і доставкою інгредієнтів. Всі
                                 продукти вищої якості виробництва Голландії та Італії.</p>
                         </div>
                     </div>
@@ -347,14 +347,14 @@
     <div class="gallery" id="gallery">
         <div class="container text-center">
             <div class="row">
-                <div class="col">
+                <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_magazinov_i_setey/franke.webp" alt="franke fm-800">
                         <p>Franke FM-800</p>
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_magazinov_i_setey/GaiaStyle.webp" alt="Bianchi Gaia Style">
                         <p>Bianchi Gaia Style</p>
@@ -362,28 +362,28 @@
                 </div>
 
 
-                <div class="col">
+                <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_magazinov_i_setey/wmf.webp" alt="WMF 1500S">
                         <p>WMF 1500 S</p>
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_magazinov_i_setey/GaiaTouch.webp" alt="Bianchi Gaia Touch">
                         <p>Bianchi Gaia Touch</p>
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_magazinov_i_setey/carimali.webp" alt="Carimali BlueDot">
                         <p>Franke FM-800</p>
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
                         <img src="./img/dlya_magazinov_i_setey/TaliaTouch.webp" alt="Bianchi Talia Touch">
                         <p>Bianchi Talia Touch</p>
