--- a/src/vending.html
+++ b/src/vending.html
@@ -189,7 +189,7 @@
     <section class="icons">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -203,7 +203,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -216,7 +216,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4">
                     <div class="card text-center">
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
@@ -371,7 +371,7 @@
     <div class="container carousel-wrapper">
         <div class="row">
             <div class="col-lg-6">
-                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3500">
                             <img src="./img/vending/slider/slider.webp" class="d-block w-100 p-3" alt="coffemashine">
@@ -403,6 +403,14 @@
                             <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Предыдущий</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Следующий</span>
+                      </button>
                 </div>
             </div>
 
