--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -230,7 +230,7 @@
                                 <br>
                                 <li><b>Потужність: <br> </b>1,8 кВт</li>
                                 <br>
-                                <li><b>Вага: <br> </b>167 кг</li>
+                                <li><b>Вага: <br> </b>167 кг</li>r
                             </ul>
                             <div class="timeline text-center">
                                 <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
@@ -458,8 +458,8 @@
                         <img src="./img/vending_avtomaty/Vista M_otr.webp" class="card-img-top mt-3" alt="Bianchi Vista M">
                         <figcaption>
                             <ul>
-                                <li><b>Панель вибору<br>з 12 кнопками</b></li>
-                                <br>
+                                <!-- <li><b>Панель вибору<br>з 12 кнопками</b></li>
+                                <br> -->
                                 <li><b>Габарити: <br> </b>Висота 1630 мм <br>Ширина 700 мм <br>Глибина 820 мм</li>
                                 <br>
                                 <li><b>Потужність: <br> </b>0,7 кВт</li>
